# TND

./: .autotools  .cproject  .project  Makefile  Makefile.am  Makefile.in  Makefile.orig  aclocal.m4  config.h  config.h.in  config.log.orig  config.status  config.status.orig  configure  configure.ac  configure.scan  description-pak  doxygen.cfg  doxygen.cfg.bak  gst-rtsp_0.10.8-1_i386.deb  gst-rtsp_0.10.8.2-1_i386.deb  ins.sh  libgstrtsp.la  libtool  pack.sh  pman.sh
data/onvif/: CMakeLists.txt  DPWS-typemap_2006_02.dat-wsse  Makefile  Makefile.am  Makefile.in  mex.xsd  ws-discovery.h  wsd.h  wsd.nsmap  wse.xsd  wst.xsd
libonvif/: Makefile  Makefile.am  Makefile.in  Makefile.orig  MediaBinding.nsmap  OnvMedia.nsmap  Onv_Media.nsmap  Onvif-duration.cpp  Onvif.nsmap  OnvifAnalyticsEngineBindingProxy.cpp  OnvifAnalyticsEngineBindingProxy.h  OnvifC (mgiustiniani-CRR's conflicted copy 2011-06-09).cpp  OnvifDeviceBindingProxy.cpp  OnvifDeviceBindingProxy.h  OnvifH.h  OnvifImagingBindingProxy.cpp  OnvifImagingBindingProxy.h  OnvifMediaBindingProxy.cpp  OnvifMediaBindingProxy.h  OnvifRuleEngineBindingProxy.cpp  OnvifRuleEngineBindingProxy.h  OnvifStub.h  analytics.h  devicemgmt.h  devicemgmt.wsdl  env-duration.cpp  envC.cpp  envH.h  envStub.h  imaging.h  libonvifanalytics.la  libonvifdevicemgmt (mgiustiniani-CRR's conflicted copy 2011-06-09).la  libonvifhello (mgiustiniani-CRR's conflicted copy 2011-06-09).la  libonvifimaging.la  libonvifmedia (mgiustiniani-CRR's conflicted copy 2011-06-09).la  libonvifremotediscovery (mgiustiniani-CRR's conflicted copy 2011-06-09).la  media.h  onvif (mgiustiniani-CRR's conflicted copy 2011-06-09).h  onvif.h  onvif.h.BACKUP.4480.h  (+4 more)
libonvif/Analytics/: AnalyticsAnalyticsEngineBindingProxy.cpp  AnalyticsAnalyticsEngineBindingProxy.h  AnalyticsC.cpp  AnalyticsEngineBinding.nsmap  AnalyticsH.h  AnalyticsRuleEngineBindingProxy.cpp  AnalyticsRuleEngineBindingProxy.h  AnalyticsStub.h
libonvif/Device/: Device-duration.cpp  Device-wsseapi.cpp  Device.nsmap  DeviceBinding.nsmap  DeviceClient.cpp  DeviceClientLib.cpp  DeviceDeviceBindingProxy.cpp  DeviceDeviceBindingProxy.h  DeviceH.h  DeviceStub.h  wsaapi.h
libonvif/Imaging/: ImagingBinding.nsmap  ImagingC.cpp  ImagingH.h  ImagingImagingBindingProxy.cpp  ImagingImagingBindingProxy.h  ImagingStub.h
libonvif/Media/: Media.nsmap  MediaBinding.nsmap  MediaH.h  MediaMediaBindingProxy.cpp  MediaMediaBindingProxy.h  MediaStub.h
libonvif/Remote/: Remote-duration.cpp  Remote.nsmap  RemoteC.cpp  RemoteH.h  RemoteStub.h  Remotedpws_discoveryProxy.cpp  Remotedpws_discoveryProxy.h  Remotedpws_discoveryService.cpp  Remotedpws_discoveryService.h  dpws_discovery.Bye.req.xml  dpws_discovery.Hello.req.xml  dpws_discovery.Probe.req.xml  dpws_discovery.ProbeMatches.req.xml  dpws_discovery.Resolve.req.xml  dpws_discovery.ResolveMatches.req.xml  soapC.cpp  soapH.h  soapStub.h
libonvif/devicemgmt/: DeviceBinding.nsmap  devicemgmtDeviceBindingProxy.cpp  devicemgmtDeviceBindingProxy.h  devicemgmtH.h  devicemgmtStub.h
src/: .dropbox  3main-storage.cpp  Makefile  Makefile.am  Makefile.in  Makefile.in.orig  Makefile.orig  dbg.h  discovery  frontend  frontend.orig  main-discovery.cpp  main-frontend.cpp  main-frontend.cpp.exp  main-hub.cpp  main-manager.cpp  main-storage.cpp  main.cpp  mutex.cpp  remotediscovery.cpp  smc-cored  smc-cored.orig  smc-hubd  smc-hubd.orig  smc-manager  smc-manager.orig  smc-storaged  smc-storaged.orig  test
src/Configure/: Instance.cpp  Instance.h  Setup.cpp  Setup.h
src/SMC/: DiscoveryServer.cpp  DiscoveryServer.h  SoapServer.cpp  SoapServer.h
src/apps/: Application.cpp  Application.h  CoreServer.cpp  CoreServer.h  HubAgent.cpp  HubAgent.h  ManagerAgent.cpp  ManagerAgent.h  StorageAgent.cpp  StorageAgent.h
src/gui/: ClickListener.cpp  ClickListener.h  DeviceCollection.cpp  DeviceCollection.h  DeviceCollection.moc.cpp  DeviceContainer.cpp  DeviceContainer.h  DeviceContainer.moc.cpp  Frontend.cpp  Frontend.h  Frontend.moc.cpp  QAgentService.cpp  QAgentService.h  QAgentService.moc.cpp  main.cpp  qoverlay.cpp  qvideowidget.cpp  qvideowidget.h  qvideowidget.moc.cpp  qvideowidget.moc.cpp.orig  restoreui.h  restoreui.moc.cpp  ui_frontend.ui  ui_frontend.ui.h  ui_frontend.ui.h.orig  ui_qvideowidget.ui  ui_qvideowidget.ui.h  ui_qvideowidget.ui.h.orig
src/observers/: AgentProxy.cpp  AgentProxy.h  CoreServerProxy.cpp  CoreServerProxy.h  DeviceProxy.cpp  DeviceProxy.h  FrontendProxy.cpp  FrontendProxy.h  HubProxy.cpp  HubProxy.h  ManagerProxy.cpp  ManagerProxy.h  RemoteProxy.cpp  RemoteProxy.h  StorageProxy.cpp  StorageProxy.h
src/onvif/: AgentRequest.cpp  AgentRequest.h  Bye.cpp  Bye.h  DeviceRequest.cpp  DeviceRequest.h  DiscoveryRequest.cpp  DiscoveryRequest.h  GetCapabilities.cpp  GetCapabilities.h  GetDeviceInformation.cpp  GetDeviceInformation.h  GetProfiles.cpp  GetProfiles.h  GetStreamInfo.cpp  GetStreamInfo.h  GetStreamUri.cpp  GetStreamUri.h  GetVideoSources.cpp  GetVideoSources.h  Hello.cpp  Hello.h  MediaRequest.cpp  MediaRequest.h  NetworkVideoTransmitter.cpp  NetworkVideoTransmitter.h  Profile.cpp  Profile.h  Request.cpp  Request.h  SetCameraInfo.cpp  SetCameraInfo.h  SetCameraUri.cpp  SetCameraUri.h  SystemReboot.cpp  SystemReboot.h  coreStation.cpp  coreStation.h  onvifdefs.h
src/patterns/: Command.cpp  Command.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h  Thread.cpp  Thread.h
src/soap/: SMC.h  SMCC.cpp  SMCH.h  SMCStub.h  SMCagentProxy.cpp  SMCagentProxy.h  SMCagentService.cpp  SMCagentService.h  SMCserverProxy.cpp  SMCserverProxy.h  SMCserverService.cpp  SMCserverService.h  agent.addCamera.req.xml  agent.addCamera.res.xml  agent.coreStation.req.xml  agent.coreStation.res.xml  agent.getStreamInfo.req.xml  agent.removeCamera.req.xml  agent.removeCamera.res.xml  agent.setCameraInfo.req.xml  agent.setCameraInfo.res.xml  agent.setCameraURI.req.xml  agent.setCameraURI.res.xml  agent.wsdl  agent.xsd  camera.xsd  server.getinfo.req.xml  server.getinfo.res.xml  server.nsmap  server.setCameraInfo.req.xml  server.setCameraInfo.res.xml  server.setCameraURI.req.xml  server.wsdl  soapH.h  (+12 more)
(+1116 files in other folders)
